developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/OJSERLIB__Application_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Application Line Item</label>
    <nameField>
        <label>Application Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>