developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Acquisition__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Acquisition__c</fullName>
    <label>Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>