developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Application__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Application__c</fullName>
    <label>Application</label>
    <referenceTo>OJSERLIB__Application__c</referenceTo>
    <relationshipLabel>Application Line Items</relationshipLabel>
    <relationshipName>Application_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>