developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Asset_Sub_List__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Asset_Sub_List__c</fullName>
    <label>Asset Sub List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>