developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Description__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>