developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Finance_Rental_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Finance_Rental_Type__c</fullName>
    <label>Finance/Rental Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Rent to Own</fullName>
            </value>
            <value>
                <fullName>Software Funding Agreement (SFA)</fullName>
            </value>
            <value>
                <fullName>Finance Lease</fullName>
            </value>
            <value>
                <fullName>Chattel Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>