developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Quantity__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>