developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Serial_SKU_No__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Serial_SKU_No__c</fullName>
    <label>Serial SKU No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>