developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Standard_Price__c</fullName>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>