developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__System_Size__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__System_Size__c</fullName>
    <label>System Size</label>
    <length>15</length>
    <type>Text</type>
</CustomField>