developerProject/force-app/main/default/objects/OJSERLIB__Application_Line_Item__c/fields/OJSERLIB__Total_Price__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Total_Price__c</fullName>
    <formula>OJSERLIB__Quantity__c  *  OJSERLIB__Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>